# HidConverter

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/: main.py  utils.py
backend/converters/: __init__.py  audio_converter.py  base.py  data_converter.py  document_converter.py  hash_converter.py  image_converter.py  metadata_cleaner.py  network_converter.py  qr_converter.py  video_converter.py
backend/tests/: test_api.py
frontend/: app.js  index.html  manifest.json  style.css  sw.js
